<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/cau3"
        android:textSize="28dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/cauhoi31"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/cauhoi32"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/cauhoi33"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spn1"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/spinner_default" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <Spinner
                android:id="@+id/spn2"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/spinner_default" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <Spinner
                android:id="@+id/spn3"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/spinner_default" />
            <LinearLayout

                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnBack3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yelow"
            android:text="@string/btnPrevious" />

        <Button
            android:id="@+id/btnResult3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/yelow"
            android:text="RESULT"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnNext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yelow"
            android:text="@string/btnNext" />
    </LinearLayout>

</LinearLayout>