<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/cau4"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="left|center_vertical"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cauhoi41"/>
                <ToggleButton
                    android:checked="true"
                    android:id="@+id/tg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Sai"
                    android:textOn="Đúng"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cauhoi42"/>
                <ToggleButton
                    android:checked="true"
                    android:id="@+id/tg2"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Sai"
                    android:textOn="Đúng"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cauhoi43"/>
                <ToggleButton
                    android:checked="true"
                    android:id="@+id/tg3"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Sai"
                    android:textOn="Đúng"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/btnBack4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPrevious"
            android:background="@color/yelow"/>
        <Button
            android:id="@+id/btnResult4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESULT"
            android:textSize="35sp"
            android:background="@color/yelow"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <Button
            android:id="@+id/btnNext4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:background="@color/yelow"/>
    </LinearLayout>
</LinearLayout>