<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/cau2"
        android:textSize="28sp"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginLeft="95dp"
            android:layout_marginBottom="35dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/cb1"
                android:text="Con cá"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <CheckBox
                android:id="@+id/cb2"
                android:text="Con gà"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="95dp"
            android:layout_marginBottom="35dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/cb3"
                android:text="Con rắn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <CheckBox
                android:id="@+id/cb4"
                android:text="Con người"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/btnBack2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPrevious"
            android:background="@color/yelow"/>
        <Button
            android:id="@+id/btnResult2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESULT"
            android:textSize="35sp"
            android:background="@color/yelow"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <Button
            android:id="@+id/btnNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:background="@color/yelow"/>
    </LinearLayout>
</LinearLayout>