<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".cau1"
   >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/cau1"
            android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="100dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rdg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbChim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Con chim"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rdbCa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Con cá"
                android:textSize="20sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rdg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="86dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbCho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Con chó"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rdbKoBiet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Không biết"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/btnBack1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPrevious"
            android:background="@color/yelow"/>
        <Button
            android:id="@+id/btnResult1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESULT"
            android:textSize="35sp"
            android:background="@color/yelow"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <Button
            android:id="@+id/btnNext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:background="@color/yelow"/>
    </LinearLayout>
</LinearLayout>